--- a/rime-mac/squirrel.custom.yaml
+++ b/rime-mac/squirrel.custom.yaml
@@ -1,11 +1,11 @@
 patch:
   show_notifications_when: appropriate          # 状态通知，适当，也可设为全开（always）全关（never）
 
-  style/color_scheme: mritd_dark                # 方案命名，不能有空格
+  style/color_scheme: leisure_dark                # 方案命名，不能有空格
   preset_color_schemes:
-    mritd_dark:
-      name: 漠然／mritd dark
-      author: mritd <mritd1234@gmail.com>
+    leisure_dark:
+      name: 幽暗／leisure dark
+      author: icerm <topolopy@gmail.com>
       horizontal: true                          # 水平排列
       inline_preedit: true                      # 单行显示，false双行显示
       candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
@@ -14,7 +14,7 @@ patch:
       border_height: 6                          # 窗口边界高度，大于圆角半径才生效
       border_width: 6                           # 窗口边界宽度，大于圆角半径才生效
       border_color_width: 0
-      #font_face: "PingFangSC"                   # 候选词字体
+      font_face: "PingFangSC"                   # 候选词字体
       font_point: 16                            # 候选字词大小
       label_font_point: 14                      # 候选编号大小
 
@@ -29,7 +29,7 @@ patch:
       hilited_candidate_back_color: 0x4b4b4b    # 第一候选项背景背景色
       hilited_candidate_label_color: 0xffffff   # 第一候选项编号颜色
       comment_text_color: 0xdedddd              # 拼音等提示文字颜色
-      #hilited_comment_text_color: 0xdedddd      # 注解文字高亮
+      hilited_comment_text_color: 0xdedddd      # 注解文字高亮
 
 
   "app_options/com.runningwithcrayons.Alfred-3/ascii_mode": true
