--- a/rime-mac/squirrel.custom.yaml
+++ b/rime-mac/squirrel.custom.yaml
@@ -25,7 +25,7 @@ patch:
       candidate_text_color: 0xeeeeee            # 预选项文字颜色
       hilited_text_color: 0xdedddd              # 高亮拼音 (需要开启内嵌编码)
       hilited_back_color: 0x252320              # 高亮拼音 (需要开启内嵌编码)
-      hilited_candidate_text_color: 0xF7AD0F    # 第一候选项文字颜色
+      hilited_candidate_text_color: 0xFFA500    # 第一候选项文字颜色
       hilited_candidate_back_color: 0x4b4b4b    # 第一候选项背景背景色
       hilited_candidate_label_color: 0xffffff   # 第一候选项编号颜色
       comment_text_color: 0xdedddd              # 拼音等提示文字颜色
