--- a/rime-mac/luna_pinyin_simp.custom.yaml
+++ b/rime-mac/luna_pinyin_simp.custom.yaml
@@ -1,6 +1,20 @@
 # luna_pinyin_simp.custom.yaml
 # 地点: ~/Library/Rime/luna_pinyin_simp.custom.yaml
-# redeploy rime to use this
+#
+# 補靪功能：將朙月拼音的詞庫修改爲朙月拼音擴充詞庫
+#
+# 作者：瑾昀 <cokunhui@gmail.com>
+#
+# 注意：本補靪適用於所有朙月拼音系列方案（「朙月拼音」、「朙月拼音·简化字」、「朙月拼音·臺灣正體」、「朙月拼音·語句流」）。
+# 只須將本 custom.yaml 的前面名字改爲對應的輸入方案名字然後放入用戶文件夾重新部署即可。如 luna_pinyin_simp.custom.yaml。
+# 雙拼用戶請使用 double_pinyin.custom.yaml。
+#
+# 附朙月拼音系列方案與其對應的 id 一覽表：
+# 輸入方案    id
+# 朙月拼音    luna_pinyin
+# 朙月拼音·简化字    luna_pinyin_simp
+# 朙月拼音·臺灣正體    luna_pinyin_tw
+# 朙月拼音·語句流    luna_pinyin_fluency
 
 patch:
   switches:
@@ -52,7 +66,7 @@ patch:
     initial_quality: -2           # 调整英文候选词的位置，如 -3 会更靠后
 
 #  載入朙月拼音擴充詞庫
-  # "translator/dictionary": luna_pinyin.extended
+  "translator/dictionary": luna_pinyin.extended
   # "translator/dictionary": pinyin_simp
 
 #  符号快速输入和部分符号的快速上屏
