add text emotions as /ei

--- a/rime-mac/luna_pinyin_simp.custom.yaml
+++ b/rime-mac/luna_pinyin_simp.custom.yaml
@@ -83,6 +83,7 @@ patch:
       "/dn": [⌘, ⌥, ⇧, ⌃, ⎋, ⇪, , ⌫, ⌦, ↩︎, ⏎, ↑, ↓, ←, →, ↖, ↘, ⇟, ⇞]
       "/fh": [©,®,℗,ⓘ,℠,™,℡,␡,♂,♀,☉,☊,☋,☌,☍,☑︎,☒,☜,☝,☞,☟,✎,✄,♻,⚐,⚑,⚠]
       "/xh": [＊,×,✱,★,☆,✩,✧,❋,❊,❉,❈,❅,✿,✲]
+      "/ei": [(¯―¯٥),(▀̿̿Ĺ̯̿▀̿ ̿),¯\_(ツ)_/¯,ヽ༼ಸ ل͜ ಸ༽ﾉ,(ノಠ益ಠ),→_→,┌∩┐(ಠ_ಠ)┌∩┐,¯\_( ͡° ͜ʖ ͡°)_/¯,ლ(´ڡ`ლ),( ͡° ͜ʖ ͡°)╭∩╮,囧,٩(♡ε♡ )۶,＿|￣|○,(︶^︶),¯\_(ツ)_/¯,(^o^),('・ω・'),( ﾟдﾟ),ヽ༼ຈل͜ຈ༽ﾉ,¯\(°_o)/¯,(/◕ヮ◕)/,┬┴┬┴༼ ಥل͟ಥ ༽ ┬┴┬┴┤]
     half_shape:
       "#": "#"
       "*": "*"
