--- a/rime-windows/default.custom.yaml
+++ b/rime-windows/default.custom.yaml
@@ -1,41 +1,31 @@
+customization:
+  distribution_code_name: Weasel
+  distribution_version: 0.15.0.0
+  generator: "Rime::SwitcherSettings"
+  modified_time: "Fri Oct 13 22:30:52 2023"
+  rime_version: 1.8.5
 patch:
+  "ascii_composer/good_old_caps_lock": true
+  "ascii_composer/switch_key":
+    Caps_Lock: commit_code
+    Control_L: noop
+    Control_R: noop
+    Shift_L: commit_code
+    Shift_R: noop
+  "key_binder/bindings":
+    - {accept: bracketleft, send: Page_Up, when: paging}
+    - {accept: bracketright, send: Page_Down, when: has_menu}
   menu:
-    page_size: 7
+    page_size: 9
   schema_list:
-  - {schema: luna_pinyin_simp}      # 朙月拼音 简化字
-  - {schema: luna_pinyin}           # 朙月拼音
-  - {schema: luna_pinyin_fluency}   # 语句流
-
+    - {schema: luna_pinyin_simp}
+    - {schema: luna_pinyin}
+    - {schema: luna_pinyin_fluency}
+    - {schema: rime_ice}
   switcher:
     abbreviate_options: true
     caption: "〔输入法设置〕"
     fold_options: true
-    hotkeys:
-      - "Control+grave"
-      - "Control+Shift+grave"
+    hotkeys: ["Control+grave", "Control+Shift+grave"]
     option_list_separator: "／"
-    save_options:
-      - full_shape
-      - ascii_punct
-      - simplification
-      - extended_charset
-      - zh_hant
-      - zh_hans
-      - zh_hant_tw
-
-  # capslock 键切换英文并输出大写
-  ascii_composer/good_old_caps_lock: true
-  # 输入法中英文状态快捷键
-  ascii_composer/switch_key:
-    Caps_Lock: commit_code
-    Control_L: noop
-    Control_R: noop
-    # 按下左 shift 英文字符直接上屏，不需要再次回车，输入法保持英文状态
-    Shift_L: commit_code
-    Shift_R: noop
-
-  # 使用 "[]" 作为翻页按键，也可以绑定其他如 "-=", 参考下面链接
-  # https://gist.github.com/lotem/2316704
-  key_binder/bindings:
-    - {when: paging, accept: bracketleft, send: Page_Up}
-    - {when: has_menu, accept: bracketright, send: Page_Down}
+    save_options: [full_shape, ascii_punct, simplification, extended_charset, zh_hant, zh_hans, zh_hant_tw]
