--- a/rime-windows/weasel_style.yaml
+++ b/rime-windows/weasel_style.yaml
@@ -21,10 +21,10 @@ style:
   # 字体设定
   # 字体1[:起始码位:结束码位:字重:字形][,字体2 ...]，详情请参考 <https://github.com/rime/weasel/wiki/字體設定>
   # 字体会依次 fallback
-  font_face: "Microsoft YaHei" # 全局字体。为了让部分复合型 emoji 正常显示，可以将 emoji 字体放在首位，并指定起始码位防止影响其他字符。refer <https://github.com/rime/weasel/issues/932> 例如：
+  font_face: "Segoe UI Emoji, Noto Color Emoji, Microsoft YaHei" # 全局字体。为了让部分复合型 emoji 正常显示，可以将 emoji 字体放在首位，并指定起始码位防止影响其他字符。refer <https://github.com/rime/weasel/issues/932> 例如：
   # "Segoe UI Emoji:20:39:bold:italic, Noto Color Emoji SVG:80, Arial:600:6ff, Segoe UI Emoji:80, LXGW Wenkai Narrow"
-  label_font_face: "Microsoft YaHei" # 标签字体
-  comment_font_face: "Microsoft YaHei" # 注释字体
+  label_font_face: "Segoe UI Emoji, Noto Color Emoji, Microsoft YaHei" # 标签字体
+  comment_font_face: "Segoe UI Emoji, Noto Color Emoji, Microsoft YaHei" # 注释字体
   font_point: 14 # 全局字体大小
   label_font_point: 14 # 标签字体大小，不设定 fallback 到 font_point
   comment_font_point: 14 # 注释字体大小，不设定 fallback 到 font_point
